# DaatLocus

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTING_zh-CN.md  Cargo.toml  README.md  README_zh-CN.md  TODO.md  build.rs  package.json
benchmark/DeepSWE/: .gitignore  README.md  pyproject.toml
benchmark/DeepSWE/src/benchmark_deepswe/: __init__.py  bridge.py  daat_locus_agent.py  runner.py
benchmark/DeepSWE/tests/: test_bridge.py  test_daat_locus_agent.py  test_runner.py  test_source_packaging.py
crates/scope-engine/: Cargo.toml  USAGE.md  scope-diff-format.md
crates/scope-engine/src/: analyzer.rs  api.rs  engine.rs  lib.rs  lsp.rs  main.rs  patch.rs  selector.rs  server.rs  state.rs  treesitter.rs  usage.rs
crates/scope-engine/src/language/: c.rs  cpp.rs  go.rs  java.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  typescript.rs
docs/: architecture.md  architecture_zh-CN.md  configuration.md  configuration_zh-CN.md  release-checklist.md
locales/: en-US.yml  zh-CN.yml
prompts/: apps-unit-how.md  apps-unit-what.md  apps-unit-when.md  event-unit-how.md  event-unit-what.md  history-compaction-prompt.md  history-compaction-summary-prefix.md  history-compaction-tool-description.md  history-compaction-user-message.md  mid-turn-summary-prefix.md  plan-unit-how.md  plan-unit-what.md  plan-unit-when.md  program-runtime-error-correction-planner-instructions.md  program-runtime-error-correction-planner-system.md  program-runtime-turn-trace-judge-instructions.md  program-runtime-turn-trace-judge-system.md  program-workflow-candidate-rollout-evaluator-system.md  (+17 more)
(+167 files in other folders)
