[project]
name = "daat-locus-deepswe"
version = "0.1.0"
description = "DeepSWE/Pier adapter for Daat Locus."
requires-python = ">=3.12"
dependencies = [
    "datacurve-pier>=0.3.0",
]

[project.scripts]
deepswe-daat-locus = "benchmark_deepswe.runner:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "benchmark_deepswe"
